Hotfix v1.01: Last Period date input

--- a/Views/MyCycles/Create.cshtml
+++ b/Views/MyCycles/Create.cshtml
@@ -13,7 +13,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="LastPeriodStartDate" class="control-label"></label>
-                <input asp-for="LastPeriodStartDate" class="form-control" />
+                <input asp-for="LastPeriodStartDate" class="form-control" type="date" />
                 <span asp-validation-for="LastPeriodStartDate" class="text-danger"></span>
             </div>
             <div class="form-group">
