Loader Page/DB retry logic Implementation

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,11 +4,13 @@
     ViewData["Title"] = "My Cycles";
 }
 
-<h2>My Cycle Tracker</h2>
+<main>
+    <h2>My Cycle Tracker</h2>
 
-<p>Welcome User! Here you can view your Menstration Cycles.</p>
+    <p>Welcome User! Here you can view your Menstration Cycles.</p>
 
-<a asp-controller="MyCycles" asp-action="Index" class="btn btn-primary">View My Cycles</a>
+    <a asp-controller="MyCycles" asp-action="Index" class="btn btn-primary">View My Cycles</a>
+</main>
 
 <!-- 
 TODO: 
