--- a/Views/Shared/Error.cshtml
+++ b/Views/Shared/Error.cshtml
@@ -11,7 +11,7 @@
             Our database is currently enjoying a strong cup of maintenance blend ☕
         </p>
         <p style="font-size: 1.2em; line-height: 1.6;">
-            We’ll be back up and running by <strong>July 1, 2025</strong>
+            We’ll be back up and running by <strong>shortly</strong>
         </p>
         <p style="margin-top: 20px;">Thank you for your patience and understanding!</p>
     </div>
