--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -54,9 +54,21 @@
             &copy; 2025 - HerCalendar - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+
+    <!-- Loader UI -->
+    <div id="page-loader" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:white; z-index:9999; text-align:center; padding-top:20%;">
+        <h3 id="loader-status">Loading your cycle data... please wait ⏳</h3>
+        <h4>☕ The server's sipping coffee and stretching its legs... it'll be right with you!</h4>
+        <p id="retry-btn-container" style="display:none;">
+            <button onclick="retryLastFetch()" class="btn btn-warning">Try Again</button>
+        </p>
+    </div>
+
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/mycycles-loader.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
