--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -59,8 +59,8 @@
 
     <!-- Loader UI -->
     <div id="page-loader" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:white; z-index:9999; text-align:center; padding-top:20%;">
-        <h3 id="loader-status">Loading your cycle data... please wait ⏳</h3>
-        <h4>☕ The server's sipping coffee and stretching its legs... it'll be right with you!</h4>
+        <h3 id="loader-status">Welcome back! Just brewing up your cycle data... ⏳</h3>
+        <h4>☕ The server's warming up its mug and getting things ready!</h4>
         <p id="retry-btn-container" style="display:none;">
             <button onclick="retryLastFetch()" class="btn btn-warning">Try Again</button>
         </p>
