Implemented Mint UI Theme

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
 
     <p>Welcome User! Here you can view your Menstration Cycles.</p>
 
-    <a asp-controller="MyCycles" asp-action="Index" class="btn btn-primary">View My Cycles</a>
+    <a asp-controller="MyCycles" asp-action="Index" class="btn btn-secondary">View My Cycles</a>
 </main>
 
 <!-- 
