--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -30,3 +30,14 @@ body {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
   text-align: start;
 }
+
+input:hover {
+    border-color: rgba(120, 194, 173, 1);
+    box-shadow: 0 0 5px rgba(27, 110, 194, 0.5);
+    transition: all 0.2s ease-in-out;
+}
+
+input:focus {
+    border-color: rgba(120, 194, 173, 1);
+    box-shadow: 0 0 5px rgba(27, 110, 194, 0.5);
+}
