--- a/Views/MyCycles/Delete.cshtml
+++ b/Views/MyCycles/Delete.cshtml
@@ -4,31 +4,29 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>My Cycle Tracker</h2>
+<h1 class="mt-4 mb-3 pb-2 text-center">🩸 Menstrual Cycle Delete 🩸</h1>
 
-<div>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CycleLength)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CycleLength)
-        </dd>
-        <dd class = "col-sm-10">
-            @Html.DisplayNameFor(model => model.LastPeriodStartDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayFor(model => model.LastPeriodStartDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayNameFor(model => model.NextPeriodStartDate)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete" onsubmit="return confirm('Are you sure you want to delete this cycle?');">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+<div class="d-flex justify-content-center mt-5">
+    <div class="card border-light p-4" style="max-width: 500px; width: 100%">
+        <div class="card-body">
+            <dl class="row">
+                <dt class="col-sm-7 text-start fs-5">Cycle Length:</dt>
+                <dd class="col-sm-5 fs-5">@Model.CycleLength days</dd>
+
+                <dt class="col-sm-7 text-start fs-5">Last Period Start:</dt>
+                <dd class="col-sm-5 fs-5">@Model.LastPeriodStartDate.ToString("MMMM dd, yyyy")</dd>
+
+                <dt class="col-sm-7 text-start fs-5">Next Period Start:</dt>
+                <dd class="col-sm-5 fs-5">@Model.NextPeriodStartDate.ToString("MMMM dd, yyyy")</dd>
+            </dl>
+            <!-- Footer Buttons -->
+            <div class="card-footer d-flex justify-content-between align-items-center px-0">
+                <form asp-action="Delete" onsubmit="return confirm('Are you sure you want to delete this entry?');" class="mb-0">
+                    <input type="hidden" asp-for="Id" />
+                    <input type="submit" value="Delete" class="btn btn-secondary" />
+                </form>
+                <a asp-action="Index" class="btn btn-outline-dark">Back to List</a>
+            </div>
+        </div>
+    </div>
 </div>
