Registration UI and Header changes

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,8 +5,8 @@
 }
 
 <main>
-    <h2>My Cycle Tracker</h2>
-
+    <h1 class="mt-4">Homepage</h1>
+    <hr />
     <p>Welcome User! Here you can view your Menstration Cycles.</p>
 
     <a asp-controller="MyCycles" asp-action="Index" class="btn btn-secondary">View My Cycles</a>
