--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -2,8 +2,9 @@
     ViewData["Title"] = "Privacy Policy";
 }
 <main>
-    <h1>@ViewData["Title"]</h1>
-
+    <h1 class="mt-4">@ViewData["Title"]</h1>
+    <hr />
+    
     <p>Last updated: June 25, 2025</p>
 
     <p><strong>HerCalendar</strong> is committed to protecting your privacy. This Privacy Policy explains what personal data we collect, how we use it, and your rights as a user of our application.</p>
