--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -75,3 +75,34 @@ input:focus {
     background-position: center;
     background-repeat: no-repeat;
 }
+
+.loader-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.85);
+    z-index: 9999;
+    align-items: center;
+    justify-content: center;
+}
+
+.loader-container {
+    width: 50%;
+    text-align: center;
+}
+
+.loader-message {
+    font-size: 1.45rem;
+    font-weight: 500;
+    margin-bottom: 1rem;
+    color: #333;
+}
+
+.retry-button {
+    margin-top: 1rem;
+    display: none;
+    font-size: 1rem;
+}
