--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,3 +1,6 @@
+
+/* Shared App Styling */
+
 html {
     font-size: 14px;
     scroll-behavior: smooth;
@@ -43,6 +46,8 @@ input:focus {
     box-shadow: 0 0 5px rgba(27, 110, 194, 0.5);
 }
 
+/* Homepage Styling */
+
 @keyframes bounce-right {
     0%, 20%, 50%, 80%, 100% {
         transform: translateX(0);
@@ -66,15 +71,14 @@ input:focus {
 }
 
 .background-calm {
-    background-image: url('/images/calendar_image.svg'); /* path to your image */
-
-    z-index: -1; /* behind all content */
-
-   
+    background-image: url('/images/calendar_image.svg'); 
+    z-index: -1;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
+
+/* Loader Overlay Styling */
 
 .loader-overlay {
     display: none;
