--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="MyCycles" asp-action="Index">My Cycles</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MyCycles" asp-action="Loader">My Cycles</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -73,6 +73,7 @@
             <br />
         </div>
     </div>
+    
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
